feat: auth jwt, gorm, swagger basic response
